# impulse

./: .gitignore  Cargo.toml  compose.yml  package.json  readme.md
migrations/: 20251105171351_create-visitor-count-table.sql
scripts/: build.sh  dev.sh
src/: constants.rs  main.rs  models.rs
src/components/: icons.rs  layouts.rs  mod.rs
src/pages/: landing.rs  mod.rs  product.rs
templates/: index.html
