[package]
name = "impulse"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
maud = "0.27.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["fs"] }
